--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@
 # Visual Studio cache directory
 .vs/
 
+#Rider cache directory
+.idea/
+
 # Gradle cache directory
 .gradle/
 
@@ -70,3 +73,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
